# honeyquest

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  Jenkinsfile  LICENSE_HEADER.txt  README.md  pod-definition.yaml  workspace.yaml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md
.github/workflows/: build-honeyquest.yml
dataset/: honeyquest_marks.csv  honeyquest_responses.csv
docs/: DEPLOYMENT.md  HONEYPATCH.md  QUERY_CREATION.md  QUERY_DATABASE.md  QUERY_GLOSSARY.md
docs/examples/: http-response.txt
honeyquest-dataset/: README.md  honeyquest_lines.csv  honeyquest_queries.csv  honeyquest_users.csv
query-database/index/: TR645.yaml  TR737.yaml  complete.yaml
query-database/metadata/: http-request-smuggling-clte.md  insecure-direct-object-references.md  owasp-api2-2019-broken-user-authentication.md  owasp-api3-2019-excessive-data-exposure.md  owasp-api4-2019-lack-of-resources-and-rate-limiting.md  owasp-api6-2019-mass-assignment.md  owasp-api8-2019-injection.md  owasp-api9-2019-improper-assets-management.md  path-traversal.md
query-database/queries/TR645/: TR645-htaccess.yaml
query-database/queries/TR849/filesystem/: rowe.yaml
query-database/queries/TR849/networkrequests/: petrunic-admin-false.yaml
query-database/queries/TR856/httpheaders/: outdated-and-apiserver.yaml  outdated-and-proxy-referer.yaml
query-database/queries/TR856/networkrequests/: security-misconfig-and-session-id.yaml
querydb/: README.md
querydb/honeyaml/: httpheader.yml
querydb/index/: TR1000.yaml  TR864.yaml  main.yaml
querydb/metadata/: owasp-api1-2019-broken-object-level-authorization.md  owasp-api10-2019-insufficient-logging-and-monitoring.md  owasp-api5-2019-broken-function-level-authorization.md  owasp-api7-2019-security-misconfiguration.md
querydb/queries/TR645/: TR645-filesystem.yaml
querydb/queries/TR849/filesystem/: nikiforakis.yaml
querydb/queries/TR849/httpheaders/: sahin-admin-cookie.yaml
querydb/queries/TR849/networkrequests/: sahin-login-credentials.yaml  sahin-system-prod.yaml  sahin-url-parameter-injection.yaml
querydb/queries/TR856/httpheaders/: outdated-and-devtoken.yaml
querydb/queries/TR856/networkrequests/: risky-networkrequests-and-path-traversal.yaml
querydb/queries/tutorial/: tutorial.yaml
src/docker/: entrypoint.py  nginx.conf
src/honeyback/: .gitignore  pyproject.toml  tox.ini
src/honeyback/honeyquest/: __main__.py
src/honeyback/honeyquest/api/: __init__.py  config.py  server.py
src/honeyback/honeyquest/api/routes/: admin.py  api.py
src/honeyback/honeyquest/api/services/: metadata.py  query.py  sessions.py  storage.py
src/honeyback/honeyquest/common/: archive.py  diagnostics.py  las.py  markdown.py  ratelimit.py  serializers.py  timestamps.py
src/honeyback/honeyquest/common/models/: admin.py  feedback.py  metadata.py  query.py  user.py
src/honeyback/honeyquest/data/: __init__.py  config.py  config.yaml  types.py
src/honeyback/honeyquest/data/jobs/: hackertarget.py  index.py  upload.py  validate.py
src/honeyback/honeyquest/data/notebooks/: .env  .gitignore  balance.ipynb  binom.ipynb  livedemo.ipynb  paper.ipynb  prize.ipynb
src/honeyback/honeyquest/data/ops/: anonymizing.py  cleaning.py  counting.py  loading.py  processing.py  reporting.py  scoring.py  testing.py  transforming.py
src/honeyback/honeyquest/data/ops/aspects/: defensiveness.py  enticingness.py  marking.py
src/honeyback/honeyquest/data/ops/generation/latex/: constants.py  variables.py
src/honeyback/honeyquest/data/ops/generation/latex/tables/: defensiveness.py  enticingness.py  marking.py  postprocess.py
src/honeyback/honeyquest/data/ops/visuals/: activity.py  answers.py  datasets.py  demographics.py
src/honeyback/honeyquest/data/util/: har.py  jupyter.py  latex.py  listutil.py  metrics.py  rbridge.py
src/honeyfront/: eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mts
src/honeyfront/public/: manifest.json
src/honeyfront/src/: App.tsx  custom.d.ts  index.css  main.tsx
src/honeyfront/src/components/: AdminCard.css  AdminCard.tsx  CodeView.css  CodeView.tsx  EndCard.tsx  ErrorBanner.tsx  ExperimentInfo.css  ExperimentInfo.tsx  FeedbackComponent.tsx  Footer.css  Footer.tsx  HoneyquestLead.css  HoneyquestLead.tsx  LoadingSpinner.tsx  Main.tsx  MetadataCard.tsx  ProfileCard.tsx  ProfileInfo.css  ProfileInfo.tsx  ProgressBar.css  ProgressBar.tsx  QueryCard.css  QueryCard.tsx  QueryCardGroup.tsx  (+1 more)
src/honeypatch/: Dockerfile  entrypoint.sh  pyproject.toml  tox.ini
src/honeypatch/honeypatch/: __main__.py  injection.py  pool.py
src/honeypatch/honeypatch/filters/: base.py  factory.py  httpheader.py  jsonreponse.py
src/honeypatch/honeypatch/models/: base.py  httpheader.py  jsonresponse.py
src/honeypatch/tests/: test_httpheader.py
(+61 files in other folders)
